# MobaXterm-keygen

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.py
util/: Ui_gui.py  core_algorithm.py  get_file_version_info.py  gui.py  gui.ui
